@@ -17,7 +17,6 @@
 */
 package org.wso2.carbon.identity.entitlement.internal;
 
-import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.ArrayUtils;
 import org.apache.commons.lang.StringUtils;
@@ -47,8 +46,8 @@ import org.wso2.carbon.registry.core.service.RegistryService;
 import org.wso2.carbon.user.core.listener.UserOperationEventListener;
 import org.wso2.carbon.user.core.service.RealmService;
 import org.wso2.carbon.utils.CarbonUtils;
+import org.wso2.carbon.utils.ConfigurationContextService;
 import org.wso2.carbon.utils.NetworkUtils;
-
 import java.io.File;
 import java.net.InetAddress;
 import java.net.SocketException;
@@ -68,6 +67,11 @@ import java.util.concurrent.Executors;
  * @scr.reference name="user.realmservice.default"
  * interface="org.wso2.carbon.user.core.service.RealmService" cardinality="1..1"
  * policy="dynamic" bind="setRealmService" unbind="unsetRealmService"
+ * @scr.reference name="config.context.service"
+ * interface="org.wso2.carbon.utils.ConfigurationContextService"
+ * cardinality="1..1" policy="dynamic"
+ * bind="setConfigurationContextService"
+ * unbind="unsetConfigurationContextService"
  * @scr.reference name="identityCoreInitializedEventService"
  * interface="org.wso2.carbon.identity.core.util.IdentityCoreInitializedEvent" cardinality="1..1"
  * policy="dynamic" bind="setIdentityCoreInitializedEventService" unbind="unsetIdentityCoreInitializedEventService"
@@ -82,10 +86,14 @@ import java.util.concurrent.Executors;
 
 
 public class EntitlementServiceComponent {
-
+    
+    /**
+     * Property used to specify the configuration file.
+     */
+    public static final String PDP_CONFIG_FILE_PATH = "org.wso2.balana.PDPConfigFile";
+    
     private static final Log log = LogFactory.getLog(EntitlementServiceComponent.class);
     private static RegistryService registryService = null;
-    private static EntitlementConfigHolder entitlementConfig = null;
     private static RealmService realmservice;
     private static NotificationSender notificationSender;
     private ThriftAuthenticatorService thriftAuthenticationService;
@@ -101,7 +109,7 @@ public class EntitlementServiceComponent {
      * @return
      */
     public static EntitlementConfigHolder getEntitlementConfig() {
-        return entitlementConfig;
+        return EntitlementConfigHolder.getInstance();
     }
 
     /**
@@ -185,20 +193,36 @@ public class EntitlementServiceComponent {
 
         try {
             // build configuration file
-            entitlementConfig = new EntitlementConfigHolder();
             EntitlementExtensionBuilder builder = new EntitlementExtensionBuilder();
             builder.setBundleContext(ctxt.getBundleContext());
-            builder.buildEntitlementConfig(entitlementConfig);
+            builder.buildEntitlementConfig(EntitlementConfigHolder.getInstance());
+
+            boolean balanaConfig = Boolean.parseBoolean((String) EntitlementServiceComponent.getEntitlementConfig().
+                    getEngineProperties().get(PDPConstants.BALANA_CONFIG_ENABLE));
+            
+            String configProperty = System.getProperty(PDP_CONFIG_FILE_PATH);
+
+            if (balanaConfig && configProperty == null) {
+                String configFilePath = CarbonUtils.getCarbonConfigDirPath() + File.separator + "security" 
+                    + File.separator + "balana-config.xml";
+                
+                System.setProperty(PDP_CONFIG_FILE_PATH, configFilePath);
+            }
+            
+            if (log.isDebugEnabled()) {
+                log.debug("Setting org.wso2.balana.PDPConfigFile property to " 
+                          + System.getProperty(PDP_CONFIG_FILE_PATH));
+            }
 
             // Start loading schema.
-            new Thread(new SchemaBuilder(entitlementConfig)).start();
+            new Thread(new SchemaBuilder(EntitlementConfigHolder.getInstance())).start();
 
             // Read XACML policy files from a pre-defined location in the
             // filesystem and load to registry at the server startup
             PAPPolicyStore papPolicyStore = new PAPPolicyStore(
                     registryService.getGovernanceSystemRegistry());
 
-            String startUpPolicyAdding = entitlementConfig.getEngineProperties().getProperty(
+            String startUpPolicyAdding = EntitlementConfigHolder.getInstance().getEngineProperties().getProperty(
                     PDPConstants.START_UP_POLICY_ADDING);
 
             List<String> policyIdList = new ArrayList<>();
@@ -211,7 +235,7 @@ public class EntitlementServiceComponent {
             if (startUpPolicyAdding != null && Boolean.parseBoolean(startUpPolicyAdding)) {
 
                 File policyFolder = null;
-                String policyPathFromConfig = entitlementConfig.getEngineProperties().getProperty(
+                String policyPathFromConfig = EntitlementConfigHolder.getInstance().getEngineProperties().getProperty(
                         PDPConstants.FILESYSTEM_POLICY_PATH);
 
                 if (StringUtils.isNotBlank(policyPathFromConfig)) {
@@ -232,8 +256,10 @@ public class EntitlementServiceComponent {
 
                 boolean customPolicies = false;
 
-                if (policyFolder != null && policyFolder.exists()) {
-                    for (File policyFile : policyFolder.listFiles()) {
+                File[] fileList;
+                if (policyFolder != null && policyFolder.exists()
+                        && ArrayUtils.isNotEmpty(fileList = policyFolder.listFiles())) {
+                    for (File policyFile : fileList) {
                         if (policyFile.isFile()) {
                             PolicyDTO policyDTO = new PolicyDTO();
                             policyDTO.setPolicy(FileUtils.readFileToString(policyFile));
@@ -247,7 +273,6 @@ public class EntitlementServiceComponent {
                                 }
                             }
                             customPolicies = true;
-
                         }
                     }
                 }
@@ -461,7 +486,7 @@ public class EntitlementServiceComponent {
                 byte[] byteAddress = new byte[4];
                 for (int i = 0; i < splittedString.length; i++) {
                     if (Integer.parseInt(splittedString[i]) > 127) {
-                        byteAddress[i] = new Integer(Integer.parseInt(splittedString[i]) - 256).byteValue();
+                        byteAddress[i] = Integer.valueOf(Integer.parseInt(splittedString[i]) - 256).byteValue();
                     } else {
                         byteAddress[i] = Byte.parseByte(splittedString[i]);
                     }
@@ -509,6 +534,22 @@ public class EntitlementServiceComponent {
         /* reference IdentityCoreInitializedEvent service to guarantee that this component will wait until identity core
          is started */
     }
+
+
+    protected void setConfigurationContextService(ConfigurationContextService configCtxtService) {
+        if (log.isDebugEnabled()) {
+            log.debug("ConfigurationContextService set in EntitlementServiceComponent bundle.");
+        }
+        EntitlementConfigHolder.getInstance().setConfigurationContextService(configCtxtService);
+    }
+
+    protected void unsetConfigurationContextService(ConfigurationContextService configCtxtService) {
+        if (log.isDebugEnabled()) {
+            log.debug("ConfigurationContextService unset in EntitlementServiceComponent bundle.");
+        }
+        EntitlementConfigHolder.getInstance().setConfigurationContextService(null);
+    }
+
 
     /**
      * Thread that starts thrift server
