@@ -15,6 +15,7 @@
  */
 
 package org.wso2.carbon.identity.core.dao;
+
 import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang.StringUtils;
@@ -55,12 +56,14 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
                     .PROP_SAML_SSO_SIGNING_ALGORITHM));
         }
 
-        if (resource.getProperty(IdentityRegistryResources.PROP_SAML_SSO_ASSERTION_QUERY_REQUEST_PROFILE_ENABLED) != null) {
-            serviceProviderDO.setAssertionQueryRequestProfileEnabled(new Boolean(resource.getProperty(
+        if (resource.getProperty(IdentityRegistryResources.PROP_SAML_SSO_ASSERTION_QUERY_REQUEST_PROFILE_ENABLED) !=
+                null) {
+            serviceProviderDO.setAssertionQueryRequestProfileEnabled(Boolean.valueOf(resource.getProperty(
                     IdentityRegistryResources.PROP_SAML_SSO_ASSERTION_QUERY_REQUEST_PROFILE_ENABLED).trim()));
         }
 
-        if (resource.getProperty(IdentityRegistryResources.PROP_SAML_SSO_SUPPORTED_ASSERTION_QUERY_REQUEST_TYPES) != null) {
+        if (resource.getProperty(IdentityRegistryResources.PROP_SAML_SSO_SUPPORTED_ASSERTION_QUERY_REQUEST_TYPES) !=
+                null) {
             serviceProviderDO.setSupportedAssertionQueryRequestTypes(resource.getProperty(
                     IdentityRegistryResources.PROP_SAML_SSO_SUPPORTED_ASSERTION_QUERY_REQUEST_TYPES).trim());
         }
@@ -70,8 +73,20 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
                     .PROP_SAML_SSO_DIGEST_ALGORITHM));
         }
 
+        if (StringUtils.isNotEmpty(resource.getProperty(IdentityRegistryResources
+                .PROP_SAML_SSO_ASSERTION_ENCRYPTION_ALGORITHM))) {
+            serviceProviderDO.setAssertionEncryptionAlgorithmUri(resource.getProperty(IdentityRegistryResources
+                    .PROP_SAML_SSO_ASSERTION_ENCRYPTION_ALGORITHM));
+        }
+
+        if (StringUtils.isNotEmpty(resource.getProperty(IdentityRegistryResources
+                .PROP_SAML_SSO_KEY_ENCRYPTION_ALGORITHM))) {
+            serviceProviderDO.setKeyEncryptionAlgorithmUri(resource.getProperty(IdentityRegistryResources
+                    .PROP_SAML_SSO_KEY_ENCRYPTION_ALGORITHM));
+        }
+
         if (resource.getProperty(IdentityRegistryResources.PROP_SAML_SSO_DO_SINGLE_LOGOUT) != null) {
-            serviceProviderDO.setDoSingleLogout(new Boolean(resource.getProperty(
+            serviceProviderDO.setDoSingleLogout(Boolean.valueOf(resource.getProperty(
                     IdentityRegistryResources.PROP_SAML_SSO_DO_SINGLE_LOGOUT).trim()));
         }
 
@@ -82,9 +97,8 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
 
         if (resource
                 .getProperty(IdentityRegistryResources.PROP_SAML_SSO_ENABLE_NAMEID_CLAIMURI) != null) {
-            if (new Boolean(resource.getProperty(
-                    IdentityRegistryResources.PROP_SAML_SSO_ENABLE_NAMEID_CLAIMURI)
-                    .trim())) {
+            if (Boolean.valueOf(resource.getProperty(
+                    IdentityRegistryResources.PROP_SAML_SSO_ENABLE_NAMEID_CLAIMURI).trim())) {
                 serviceProviderDO.setNameIdClaimUri(resource.
                         getProperty(IdentityRegistryResources.PROP_SAML_SSO_NAMEID_CLAIMURI));
             }
@@ -94,7 +108,7 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
                 getProperty(IdentityRegistryResources.PROP_SAML_SSO_LOGIN_PAGE_URL));
 
         if (resource.getProperty(IdentityRegistryResources.PROP_SAML_SSO_DO_SIGN_RESPONSE) != null) {
-            serviceProviderDO.setDoSignResponse(new Boolean(resource.getProperty(
+            serviceProviderDO.setDoSignResponse(Boolean.valueOf(resource.getProperty(
                     IdentityRegistryResources.PROP_SAML_SSO_DO_SIGN_RESPONSE).trim()));
         }
 
@@ -106,7 +120,7 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
         }
 
         if (resource.getProperty(IdentityRegistryResources.PROP_SAML_SSO_DO_SIGN_ASSERTIONS) != null) {
-            serviceProviderDO.setDoSignAssertions(new Boolean(resource.getProperty(
+            serviceProviderDO.setDoSignAssertions(Boolean.valueOf(resource.getProperty(
                     IdentityRegistryResources.PROP_SAML_SSO_DO_SIGN_ASSERTIONS).trim()));
         }
 
@@ -139,18 +153,14 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
                 .getProperty(IdentityRegistryResources.PROP_SAML_SSO_ENABLE_ATTRIBUTES_BY_DEFAULT) != null) {
             String enableAttrByDefault = resource
                     .getProperty(IdentityRegistryResources.PROP_SAML_SSO_ENABLE_ATTRIBUTES_BY_DEFAULT);
-            if ("true".equals(enableAttrByDefault)) {
-                serviceProviderDO.setEnableAttributesByDefault(true);
-            } else {
-                serviceProviderDO.setEnableAttributesByDefault(false);
-            }
+            serviceProviderDO.setEnableAttributesByDefault(Boolean.valueOf(enableAttrByDefault));
         }
         if (resource.getProperty(IdentityRegistryResources.PROP_SAML_SSO_IDP_INIT_SSO_ENABLED) != null) {
-            serviceProviderDO.setIdPInitSSOEnabled(new Boolean(resource.getProperty(
+            serviceProviderDO.setIdPInitSSOEnabled(Boolean.valueOf(resource.getProperty(
                     IdentityRegistryResources.PROP_SAML_SSO_IDP_INIT_SSO_ENABLED).trim()));
         }
         if (resource.getProperty(IdentityRegistryResources.PROP_SAML_SLO_IDP_INIT_SLO_ENABLED) != null) {
-            serviceProviderDO.setIdPInitSLOEnabled(new Boolean(resource.getProperty(
+            serviceProviderDO.setIdPInitSLOEnabled(Boolean.valueOf(resource.getProperty(
                     IdentityRegistryResources.PROP_SAML_SLO_IDP_INIT_SLO_ENABLED).trim()));
             if (serviceProviderDO.isIdPInitSLOEnabled() && resource.getProperty(
                     IdentityRegistryResources.PROP_SAML_IDP_INIT_SLO_RETURN_URLS) != null) {
@@ -159,27 +169,33 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
             }
         }
         if (resource.getProperty(IdentityRegistryResources.PROP_SAML_SSO_ENABLE_ENCRYPTED_ASSERTION) != null) {
-            serviceProviderDO.setDoEnableEncryptedAssertion(new Boolean(resource.getProperty(
+            serviceProviderDO.setDoEnableEncryptedAssertion(Boolean.valueOf(resource.getProperty(
                     IdentityRegistryResources.PROP_SAML_SSO_ENABLE_ENCRYPTED_ASSERTION).trim()));
         }
         if (resource.getProperty(IdentityRegistryResources.PROP_SAML_SSO_VALIDATE_SIGNATURE_IN_REQUESTS) != null) {
-            serviceProviderDO.setDoValidateSignatureInRequests(new Boolean(resource.getProperty(
+            serviceProviderDO.setDoValidateSignatureInRequests(Boolean.valueOf(resource.getProperty(
                     IdentityRegistryResources.PROP_SAML_SSO_VALIDATE_SIGNATURE_IN_REQUESTS).trim()));
         }
         return serviceProviderDO;
     }
 
-    public boolean addServiceProvider(SAMLSSOServiceProviderDO serviceProviderDO)
-            throws IdentityException {
-        String path = null;
+    /**
+     * Add the service provider information to the registry.
+     * @param serviceProviderDO Service provider information object.
+     * @return True if addition successful.
+     * @throws IdentityException Error while persisting to the registry.
+     */
+    public boolean addServiceProvider(SAMLSSOServiceProviderDO serviceProviderDO) throws IdentityException {
 
-
-        if (serviceProviderDO.getIssuer() != null) {
-            path = IdentityRegistryResources.SAML_SSO_SERVICE_PROVIDERS
-                    + encodePath(serviceProviderDO.getIssuer());
+        if (serviceProviderDO == null || serviceProviderDO.getIssuer() == null ||
+                StringUtils.isBlank(serviceProviderDO.getIssuer())) {
+            throw new IdentityException("Issuer cannot be found in the provided arguments.");
         }
 
+        String path = IdentityRegistryResources.SAML_SSO_SERVICE_PROVIDERS + encodePath(serviceProviderDO.getIssuer());
+
         boolean isTransactionStarted = Transaction.isStarted();
+        boolean isErrorOccurred = false;
         try {
             if (registry.resourceExists(path)) {
                 if (log.isDebugEnabled()) {
@@ -190,34 +206,22 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
             }
 
             Resource resource = createResource(serviceProviderDO);
-            try {
-                if (!isTransactionStarted) {
-                    registry.beginTransaction();
-                }
-
-                registry.put(path, resource);
-
-                if (!isTransactionStarted) {
-                    registry.commitTransaction();
-                }
-
-            } catch (RegistryException e) {
-                if (!isTransactionStarted) {
-                    registry.rollbackTransaction();
-                }
-                throw e;
+            if (!isTransactionStarted) {
+                registry.beginTransaction();
             }
-
+            registry.put(path, resource);
+            if (log.isDebugEnabled()) {
+                log.debug("Service Provider " + serviceProviderDO.getIssuer() + " is added successfully.");
+            }
+            return true;
         } catch (RegistryException e) {
-            log.error("Error While adding Service Provider", e);
-            throw IdentityException.error("Error while adding Service Provider", e);
+            isErrorOccurred = true;
+            String msg = "Error while adding Service Provider for issuer: " + serviceProviderDO.getIssuer();
+            log.error(msg, e);
+            throw IdentityException.error(msg, e);
+        } finally {
+            commitOrRollbackTransaction(isErrorOccurred);
         }
-
-        if (log.isDebugEnabled()) {
-            log.debug("Service Provider " + serviceProviderDO.getIssuer()
-                    + " is added successfully.");
-        }
-        return true;
     }
 
     private Resource createResource(SAMLSSOServiceProviderDO serviceProviderDO) throws RegistryException {
@@ -240,6 +244,10 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
                 .getSigningAlgorithmUri());
         resource.addProperty(IdentityRegistryResources.PROP_SAML_SSO_DIGEST_ALGORITHM, serviceProviderDO
                 .getDigestAlgorithmUri());
+        resource.addProperty(IdentityRegistryResources.PROP_SAML_SSO_ASSERTION_ENCRYPTION_ALGORITHM, serviceProviderDO
+                .getAssertionEncryptionAlgorithmUri());
+        resource.addProperty(IdentityRegistryResources.PROP_SAML_SSO_KEY_ENCRYPTION_ALGORITHM, serviceProviderDO
+                .getKeyEncryptionAlgorithmUri());
         if (serviceProviderDO.getNameIdClaimUri() != null
                 && serviceProviderDO.getNameIdClaimUri().trim().length() > 0) {
             resource.addProperty(
@@ -289,7 +297,7 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
                     IdentityRegistryResources.PROP_SAML_SSO_ATTRIB_CONSUMING_SERVICE_INDEX,
                     serviceProviderDO.getAttributeConsumingServiceIndex());
         }
-        if (CollectionUtils.isNotEmpty(serviceProviderDO.getRequestedAudiencesList()) ) {
+        if (CollectionUtils.isNotEmpty(serviceProviderDO.getRequestedAudiencesList())) {
             resource.setProperty(IdentityRegistryResources.PROP_SAML_SSO_REQUESTED_AUDIENCES,
                     serviceProviderDO.getRequestedAudiencesList());
         }
@@ -341,10 +349,10 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
     }
 
     /**
-     * Remove the service provider with the given name
-     *
-     * @param issuer
-     * @throws IdentityException
+     * Remove the service provider with the given name.
+     * @return True if deletion success.
+     * @param issuer Name of the SAML issuer.
+     * @throws IdentityException Error occurred while removing the SAML service provider from registry.
      */
     public boolean removeServiceProvider(String issuer) throws IdentityException {
 
@@ -354,38 +362,34 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
 
         String path = IdentityRegistryResources.SAML_SSO_SERVICE_PROVIDERS + encodePath(issuer);
         boolean isTransactionStarted = Transaction.isStarted();
+        boolean isErrorOccurred = false;
         try {
-            if (registry.resourceExists(path)) {
-                try {
-                    if (!isTransactionStarted) {
-                        registry.beginTransaction();
-                    }
-
-                    registry.delete(path);
-
-                    if (!isTransactionStarted) {
-                        registry.commitTransaction();
-                    }
-
-                    return true;
-
-                } catch (RegistryException e) {
-                    if (!isTransactionStarted) {
-                        registry.rollbackTransaction();
-                    }
-                    throw e;
+            if (!registry.resourceExists(path)) {
+                if (log.isDebugEnabled()) {
+                    log.debug("Registry resource does not exist for the path: " + path);
                 }
+                return false;
             }
-        } catch (RegistryException e) {
-            log.error("Error removing the service provider from the registry", e);
-            throw IdentityException.error("Error removing the service provider from the registry", e);
-        }
 
-        return false;
+            // Since we are getting a global registry object, better to check whether this is a task inside already
+            // started transaction.
+            if (!isTransactionStarted) {
+                registry.beginTransaction();
+            }
+            registry.delete(path);
+            return true;
+        } catch (RegistryException e) {
+            isErrorOccurred = true;
+            String msg = "Error removing the service provider from the registry with name: " + issuer;
+            log.error(msg, e);
+            throw IdentityException.error(msg, e);
+        } finally {
+            commitOrRollbackTransaction(isErrorOccurred);
+        }
     }
 
     /**
-     * Get the service provider
+     * Get the service provider.
      *
      * @param issuer
      * @return
@@ -400,7 +404,8 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
         String tenantDomain = null;
         try {
             userRegistry = (UserRegistry) registry;
-            tenantDomain = IdentityTenantUtil.getRealmService().getTenantManager().getDomain(userRegistry.getTenantId());
+            tenantDomain = IdentityTenantUtil.getRealmService().getTenantManager().getDomain(userRegistry.
+                    getTenantId());
             if (registry.resourceExists(path)) {
                 serviceProviderDO = resourceToObject(registry.get(path));
                 serviceProviderDO.setTenantDomain(tenantDomain);
@@ -432,64 +437,70 @@ public class SAMLSSOServiceProviderDAO extends AbstractDAO<SAMLSSOServiceProvide
     }
 
     /**
-     * Upload service Provider
-     *
-     * @param serviceProviderDO
-     * @return
-     * @throws IdentityException
+     * Upload service Provider using metadata file..
+     * @param serviceProviderDO Service provider information object.
+     * @return True if upload success.
+     * @throws IdentityException Error occurred while adding the information to registry.
      */
+    public SAMLSSOServiceProviderDO uploadServiceProvider(SAMLSSOServiceProviderDO serviceProviderDO) throws
+            IdentityException {
 
+        if (serviceProviderDO == null || serviceProviderDO.getIssuer() == null) {
+            throw new IdentityException("Issuer cannot be found in the provided arguments.");
+        }
 
-    public SAMLSSOServiceProviderDO uploadServiceProvider(SAMLSSOServiceProviderDO serviceProviderDO) throws IdentityException {
+        if (serviceProviderDO.getDefaultAssertionConsumerUrl() == null) {
+            throw new IdentityException("No default assertion consumer URL provided for service provider :" +
+                    serviceProviderDO.getIssuer());
+        }
 
-        if (serviceProviderDO.getIssuer() != null && serviceProviderDO.getAssertionConsumerUrl() != null) {
-            String path = IdentityRegistryResources.SAML_SSO_SERVICE_PROVIDERS + encodePath(serviceProviderDO
-                    .getIssuer());
-            Resource resource;
+        String path = IdentityRegistryResources.SAML_SSO_SERVICE_PROVIDERS + encodePath(serviceProviderDO.getIssuer());
 
-            boolean isTransactionStarted = Transaction.isStarted();
-            try {
-                if (registry.resourceExists(path)) {
-                    if (log.isDebugEnabled()) {
-                        log.debug("Service Provider already exists with the same issuer name" + serviceProviderDO
-                                .getIssuer());
-                    }
-                    throw IdentityException.error("Service provider already exists");
+        boolean isTransactionStarted = Transaction.isStarted();
+        boolean isErrorOccurred = false;
+        try {
+            if (registry.resourceExists(path)) {
+                if (log.isDebugEnabled()) {
+                    log.debug("A Service Provider already exists with the same issuer name" + serviceProviderDO
+                            .getIssuer());
                 }
-
-                resource = createResource(serviceProviderDO);
-
-                try {
-                    if (!isTransactionStarted) {
-                        registry.beginTransaction();
-                    }
-
-                    registry.put(path, resource);
-
-                    if (!isTransactionStarted) {
-                        registry.commitTransaction();
-                    }
-
-                } catch (RegistryException e) {
-                    if (!isTransactionStarted) {
-                        registry.rollbackTransaction();
-                    }
-                    throw e;
-                }
-
-            } catch (RegistryException e) {
-                throw IdentityException.error("Error while adding Service Provider.", e);
+                throw IdentityException.error("A Service Provider already exists.");
             }
 
+            if (!isTransactionStarted) {
+                registry.beginTransaction();
+            }
+
+            Resource resource = createResource(serviceProviderDO);
+            registry.put(path, resource);
             if (log.isDebugEnabled()) {
                 log.debug("Service Provider " + serviceProviderDO.getIssuer() + " is added successfully.");
             }
-        } else {
-            throw IdentityException.error("Invalid Service Provider Metadata.");
+            return serviceProviderDO;
+        } catch (RegistryException e) {
+            isErrorOccurred = true;
+            throw IdentityException.error("Error while adding Service Provider.", e);
+        } finally {
+            commitOrRollbackTransaction(isErrorOccurred);
         }
+    }
 
+    /**
+     * Commit or rollback the registry operation depends on the error condition.
+     * @param isErrorOccurred Identifier for error transactions.
+     * @throws IdentityException Error while committing or running rollback on the transaction.
+     */
+    private void commitOrRollbackTransaction(boolean isErrorOccurred) throws IdentityException {
 
-        return serviceProviderDO;
-
+        try {
+            // Rollback the transaction if there is an error, Otherwise try to commit.
+            if (isErrorOccurred) {
+                registry.rollbackTransaction();
+            } else {
+                registry.commitTransaction();
+            }
+        } catch (RegistryException ex) {
+            throw new IdentityException("Error occurred while trying to commit or rollback the registry operation.", ex);
+        }
     }
 }
